# Chip-8_emulator

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Chip-8.cpp  Chip-8.h  DoubleAsker.cpp  DoubleAsker.h  LICENSE  Logger.cpp  Logger.h  Makefile  README.md  Timer.cpp  Timer.h  chip-8_emulator.geany  chip8emu  config.h  font_license.txt  fontset.h  gfx.h  license.h  main.cpp  sdl_file_chooser.cpp  sdl_file_chooser.h  sound.cpp  sound.h  to_hex.h  todo.txt
Debug/: Chip-8.d  DoubleAsker.d  chip8emu  main.d  makefile  objects.mk  sdl_file_chooser.d  subdir.mk
roms/: README.txt
win32/: Makefile
